# us_election

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: fetch_prices.yml
.github/workflows/: fetch_prices.yml
data/: betfair_outcome_markets.json  betfair_state_markets.json
src/: fetch_data.rs  hashmap_markets.rs  main.rs  models.rs  output.rs
