[package]
name = "us_election"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "us_election"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
polars = { version = "0.35", features = ["lazy"] }
postgres = "0.19.9"
dotenv = "0.15.0"
